@@ -1,3 +1,11 @@
+2006-06-21  Benoît Dejean  <benoit@placenet.org>
+
+	* src/disks.c: (get_icon_for_device), (find_disk_in_model),
+	(add_disk), (cb_update_disks):
+	
+	Try to be smart, don't clear the list on every refresh.
+	Closes #325090.
+
 2006-06-18  Benoît Dejean  <benoit@placenet.org>
 
 	* src/interface.c:
